--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seguimiento Señor de los Milagros</title>
+  <title>Seguimiento Señor de los Milagros - OSM</title>
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     #map {
       width: 100%;
       height: 80vh;
       border-radius: 0.5rem;
-      box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -2px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+                  0 2px 4px -2px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -20,7 +24,7 @@
       Ruta y Seguimiento: Señor de los Milagros
     </h1>
     <p class="text-gray-600 mb-4">
-      Ruta estática (línea morada) y posición actual <b>en vivo</b> (marcador 🚚).
+      Ruta estática (línea morada) y posición actual <b class="text-purple-600">en vivo</b> (marcador 🚚).
     </p>
 
     <div id="map" class="mb-6"></div>
@@ -28,10 +32,13 @@
     <div id="status" class="bg-white p-4 rounded-lg border-l-4 border-purple-500 shadow">
       <p class="font-semibold text-gray-700">Estado:</p>
       <p id="coords-display" class="text-sm text-gray-600 mt-1">
-        Esperando actualización de ubicación...
+        Esperando ubicación GPS de alta precisión...
       </p>
     </div>
   </div>
+
+  <!-- Leaflet -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <!-- Firebase + lógica -->
   <script type="module">
@@ -39,6 +46,7 @@
     import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
     import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
+    // 🔥 Config Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyDZNkcEhEIb6ckjUcnSx6mj1pFd0pZy6l4",
       authDomain: "iglesia-a4ee9.firebaseapp.com",
@@ -57,68 +65,86 @@
     let routePolyline;
     let movingMarker;
 
-    // Ruta fija
+    // Ruta fija (referencial)
     const routeCoordinates = [
-      { lat: -12.0402, lng: -77.0267 },
-      { lat: -12.0418, lng: -77.0289 },
-      { lat: -12.0425, lng: -77.0295 },
-      { lat: -12.0440, lng: -77.0275 },
-      { lat: -12.0438, lng: -77.0260 },
+      [-12.0402, -77.0267],
+      [-12.0418, -77.0289],
+      [-12.0425, -77.0295],
+      [-12.0440, -77.0275],
+      [-12.0438, -77.0260],
     ];
 
-    async function initMap() {
-      const { Map } = await google.maps.importLibrary("maps");
-      const { Marker } = await google.maps.importLibrary("marker");
-
-      const initialPosition = routeCoordinates[0];
-      map = new Map(document.getElementById("map"), {
-        center: initialPosition,
-        zoom: 17,
-        mapId: "DEMO_MAP_ID",
+    // Espera la primera ubicación en Firestore
+    function waitForInitialLocation() {
+      return new Promise((resolve) => {
+        const docRef = doc(db, "live_locations", "procesion_sm");
+        const unsubscribe = onSnapshot(docRef, (docSnap) => {
+          if (docSnap.exists() && docSnap.data().lat && docSnap.data().lng) {
+            const data = docSnap.data();
+            unsubscribe();
+            resolve([data.lat, data.lng]);
+          }
+        });
       });
-
-      // línea ruta
-      routePolyline = new google.maps.Polyline({
-        path: routeCoordinates,
-        geodesic: true,
-        strokeColor: "#5B21B6",
-        strokeOpacity: 0.9,
-        strokeWeight: 5,
-      });
-      routePolyline.setMap(map);
-
-      // 🚚 marcador
-      movingMarker = new Marker({
-        position: initialPosition,
-        map: map,
-        label: "🚚",
-        title: "Posición Actual",
-      });
-
-      listenToRealTimeLocation();
-      startSendingMyLocation(); // 👈 ahora tu móvil manda su GPS
     }
 
-    // 🔎 Leer de Firestore
+    async function initMap(initialRealPosition) {
+      const realPosition = initialRealPosition || routeCoordinates[0];
+
+      // Crear mapa con Leaflet
+      map = L.map('map');
+
+      // Capa de OpenStreetMap
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
+
+      // Dibujar ruta
+      routePolyline = L.polyline(routeCoordinates, {
+        color: '#5B21B6',
+        opacity: 0.9,
+        weight: 6
+      }).addTo(map);
+
+      // 🚚 marcador personalizado
+      const customIcon = L.divIcon({
+        className: 'custom-icon',
+        html: '<div style="font-size: 28px;">🚚</div>',
+        iconSize: [28, 28],
+        iconAnchor: [14, 14]
+      });
+
+      movingMarker = L.marker(realPosition, { icon: customIcon }).addTo(map);
+
+      // Ajustar vista para ruta + posición real
+      const bounds = routePolyline.getBounds();
+      bounds.extend(realPosition);
+      map.fitBounds(bounds, { padding: [50, 50] });
+
+      // Escuchar actualizaciones
+      listenToRealTimeLocation();
+    }
+
+    // 🔎 Escucha actualizaciones de Firestore
     function listenToRealTimeLocation() {
       const docRef = doc(db, "live_locations", "procesion_sm");
       onSnapshot(docRef, (docSnap) => {
         if (docSnap.exists()) {
           const data = docSnap.data();
           if (data.lat && data.lng) {
-            const newPosition = { lat: data.lat, lng: data.lng };
-
-            movingMarker.setPosition(newPosition);
-            map.setCenter(newPosition);
-
+            const newPosition = [data.lat, data.lng];
+            if (movingMarker) {
+              movingMarker.setLatLng(newPosition);
+              map.panTo(newPosition);
+            }
             document.getElementById("coords-display").textContent =
-              `Posición GPS: Lat ${newPosition.lat}, Lng ${newPosition.lng}`;
+              `📍 Lat: ${data.lat.toFixed(6)}, Lng: ${data.lng.toFixed(6)}`;
           }
         }
       });
     }
 
-    // 📡 Enviar tu ubicación con alta precisión
+    // 📡 Subir ubicación del móvil a Firestore
     function startSendingMyLocation() {
       if (navigator.geolocation) {
         navigator.geolocation.watchPosition(
@@ -131,10 +157,10 @@
             });
           },
           (error) => {
-            console.error("Error al obtener ubicación:", error);
+            console.error("Error GPS:", error);
           },
           {
-            enableHighAccuracy: true, // ✅ pide GPS real
+            enableHighAccuracy: true, // ✅ usa GPS del móvil
             maximumAge: 0,
             timeout: 5000
           }
@@ -147,19 +173,16 @@
     async function main() {
       try {
         await signInAnonymously(auth);
-        await initMap();
+        startSendingMyLocation();
+        const initialPos = await waitForInitialLocation();
+        await initMap(initialPos);
       } catch (error) {
-        console.error("Error inicializando visor:", error);
-        await initMap();
+        console.error("Error inicializando mapa:", error);
+        await initMap(routeCoordinates[0]); // fallback
       }
     }
 
     document.addEventListener("DOMContentLoaded", main);
-  </script>
-
-  <!-- Google Maps -->
-  <script async defer 
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZNkcEhEIb6ckjUcnSx6mj1pFd0pZy6l4&libraries=maps,marker">
   </script>
 </body>
 </html>
